# ai-image-gen

./: README.md
back/: README.md  pyproject.toml
back/api/: main.py
back/api/clients/: __init__.py  manager.py
back/api/config/: settings.py
back/api/core/: __init__.py  embedding.py  generation.py  imggen_operations.py  service.py  storage.py  test_embedding.py  test_generation.py
back/api/router/: __init__.py  images.py  imggen_router.py
back/api/schema/: __init__.py  imggen.py  schema.py
front/: README.md  next.config.ts  orval.config.ts  package.json
front/src/app/: page.tsx
front/src/components/: ImageActions.tsx  ImageGallery.tsx  ImageGenerator.tsx  ImageSearch.tsx  ImageThumbnail.tsx  LoadingSpinner.tsx  PromptInput.tsx  SearchResults.tsx
front/src/components/ui/: FileUpload.tsx
front/src/hooks/: useImageGeneration.ts
front/src/types/: index.ts
